@@ -5,6 +5,7 @@ Changelog for GitPackageManagement.
 - Allow Widget Elements
 - Fix setting description for TVs
 - Fix setting output properties for TVs
+- Add encrypt/decrypt vehicle
 
 GitPackageManagement 0.11.0 alpha
 ==============
